Release 2.10

#254 Upgrade to Jackson 2.6.4
#255 Support for constraints in MetadataBuilder
#256 Built-in JsonValueConverter for enums
#258 "AdHoc" properties
#259 NPE in metadata resource when the model has unknown attribute types
#260 LrEntityOverlay.addAttribute(String) must detect attribute type

Release 2.9

#247 Split Lr annotations in a separate jar
#252 link-rest-bom

Release 2.8

#250 Fix stage method generics boundaries

Release 2.7

#235 Allow Pojo attributes of type java.util.Collection
#238 Dynamic relationships do not work with "mapBy"
#239 Add ResourceEntity.setQualifier(..) method.
#240 Functional select pipeline interceptors
#241 Functional update pipeline interceptors
#242 Functional delete pipeline
#243 Functional pipeline for unrelate and meta chains
#244 Remove API deprecated on or before 2.0

Release 2.6

#234 Error reading relationships: Multi-join relationship propagation is not supported yet

Release 2.5

#225 Support constraining FK updates
#229 POST and PUT methods doesn't supports content type header with charset
#230 Generic object API and type conversion problems
#233 (2.x) Upgrade to Cayenne 4.0.B1

Release 2.4

#212 Upgrade to Cayenne 4.0.M4
#214 Immutable constraint objects
#218 NPE in LR client when HTTP request fails with something different from LinkRestException
#219 LinkRest 2.x upgrade to Cayenne 4.0.M5
#220 Support multi-component paths for root "mapBy"
#222 Support for Java 8 date time types in the metadata requests
#223 Rename SelectBuilder.select() to get()

Release 2.3

#208 NPE on deleting
#209 Batch delete (Sencha-only)

Release 2.2

#201 Change license from BSD to Apache 2.0
#202 Sencha adapter "filter" key can't use "id" property
#206 Cayenne exception on select by exposed ID

Release 2.1

#191 Replace Joda Time with java.time in JSON encoders and converters 
#194 Refactor root encoder for easier customization
#199 Support post/put/delete in LR Client

Release 2.0

#166 Multiple backends with parallel fetch